--- a/sfm-jooq/pom.xml
+++ b/sfm-jooq/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>sfm-jooq</artifactId>
-	<packaging>jar</packaging>
+	<packaging>bundle</packaging>
 
 
 	<parent>
