--- a/sfm-springjdbc/pom.xml
+++ b/sfm-springjdbc/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>sfm-springjdbc</artifactId>
-	<packaging>jar</packaging>
+	<packaging>bundle</packaging>
 
 	<description>SpringJdbc supports.</description>
 
