add export for lombok

--- a/pom.xml
+++ b/pom.xml
@@ -512,6 +512,7 @@
             <modules>
                 <module>sfm-test-sandbox</module>
                 <module>sfm-test-osgi</module>
+                <module>sfm-test-lombok</module>
                 <module>sfm-test-immutables</module>
                 <module>sfm-jmh</module>
             </modules>
