--- a/sfm-datastax/pom.xml
+++ b/sfm-datastax/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>2.12-SNAPSHOT</version>
+		<version>2.12</version>
 	</parent>
 
 	<description>Cassandra Datastax SFM supports.</description>
@@ -70,13 +70,13 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm</artifactId>
-			<version>2.12-SNAPSHOT</version>
+			<version>2.12</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm</artifactId>
-			<version>2.12-SNAPSHOT</version>
+			<version>2.12</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
@@ -89,7 +89,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>2.12-SNAPSHOT</version>
+			<version>2.12</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
