sfm-csv compiles

--- a/sfm-csv/pom.xml
+++ b/sfm-csv/pom.xml
@@ -46,6 +46,12 @@
 			<version>2.9.3</version>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 
 	<build>
