--- a/sfm-jdbc/pom.xml
+++ b/sfm-jdbc/pom.xml
@@ -62,6 +62,13 @@
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-core</artifactId>
 			<version>2.13-SNAPSHOT</version>
+			<scope>test</scope>
+			<type>test-jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.simpleflatmapper</groupId>
+			<artifactId>sfm-core</artifactId>
+			<version>2.13-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
