--- a/sfm-csv/pom.xml
+++ b/sfm-csv/pom.xml
@@ -34,6 +34,13 @@
 			<artifactId>sfm-core</artifactId>
 			<version>2.13-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.simpleflatmapper</groupId>
+			<artifactId>sfm-core</artifactId>
+			<version>2.13-SNAPSHOT</version>
+			<scope>test</scope>
+			<type>test-jar</type>
+		</dependency>
         <dependency>
             <groupId>org.simpleflatmapper</groupId>
             <artifactId>sfm-test</artifactId>
