--- a/sfm-jooq/pom.xml
+++ b/sfm-jooq/pom.xml
@@ -46,7 +46,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm</artifactId>
+			<artifactId>sfm-jdbc</artifactId>
 			<version>2.13-SNAPSHOT</version>
 		</dependency>
 		<dependency>
