--- a/sfm-jmh/pom.xml
+++ b/sfm-jmh/pom.xml
@@ -50,7 +50,12 @@ questions.
         </dependency>
         <dependency>
             <groupId>org.simpleflatmapper</groupId>
-            <artifactId>sfm</artifactId>
+            <artifactId>sfm-jdbc</artifactId>
+            <version>2.13-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.simpleflatmapper</groupId>
+            <artifactId>sfm-csv</artifactId>
             <version>2.13-SNAPSHOT</version>
         </dependency>
     </dependencies>
