--- a/sfm-querydsl/pom.xml
+++ b/sfm-querydsl/pom.xml
@@ -38,7 +38,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm</artifactId>
+			<artifactId>sfm-jdbc</artifactId>
 			<version>2.13-SNAPSHOT</version>
 		</dependency>
 		<dependency>
