--- a/sfm-springjdbc/pom.xml
+++ b/sfm-springjdbc/pom.xml
@@ -45,7 +45,7 @@
 
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm</artifactId>
+			<artifactId>sfm-jdbc</artifactId>
 			<version>2.13-SNAPSHOT</version>
 		</dependency>
 		<dependency>
