--- a/sfm-sql2o/pom.xml
+++ b/sfm-sql2o/pom.xml
@@ -44,7 +44,7 @@
         </dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm</artifactId>
+			<artifactId>sfm-jdbc</artifactId>
 			<version>2.13-SNAPSHOT</version>
 		</dependency>
 		<dependency>
