--- a/sfm-test-immutables/pom.xml
+++ b/sfm-test-immutables/pom.xml
@@ -33,11 +33,15 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm</artifactId>
+			<artifactId>sfm-csv</artifactId>
 			<version>2.13-SNAPSHOT</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.simpleflatmapper</groupId>
+			<artifactId>sfm-jdbc</artifactId>
+			<version>2.13-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
