--- a/sfm-test-lombok/pom.xml
+++ b/sfm-test-lombok/pom.xml
@@ -33,7 +33,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm</artifactId>
+			<artifactId>sfm-csv</artifactId>
 			<version>2.13-SNAPSHOT</version>
 		</dependency>
 		<dependency>
