--- a/sfm-test-osgi/pom.xml
+++ b/sfm-test-osgi/pom.xml
@@ -32,7 +32,13 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm</artifactId>
+			<artifactId>sfm-csv</artifactId>
+			<version>2.13-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.simpleflatmapper</groupId>
+			<artifactId>sfm-jdbc</artifactId>
 			<version>2.13-SNAPSHOT</version>
 		</dependency>
 		<dependency>
