--- a/sfm-datastax/pom.xml
+++ b/sfm-datastax/pom.xml
@@ -76,13 +76,18 @@
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-core</artifactId>
+			<artifactId>sfm-map</artifactId>
+			<version>2.13-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.simpleflatmapper</groupId>
+			<artifactId>sfm-tuples</artifactId>
 			<version>2.13-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-core</artifactId>
+			<artifactId>sfm-map</artifactId>
 			<version>2.13-SNAPSHOT</version>
 			<type>test-jar</type>
 			<scope>test</scope>
