--- a/sfm-map/pom.xml
+++ b/sfm-map/pom.xml
@@ -35,6 +35,12 @@
 			<version>2.13-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>org.simpleflatmapper</groupId>
+			<artifactId>sfm-tuples</artifactId>
+			<version>2.13-SNAPSHOT</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>org.ow2.asm</groupId>
 			<artifactId>asm</artifactId>
 			<version>5.1</version>
@@ -83,19 +89,9 @@
 							org.simpleflatmapper.core.map.column,
 							org.simpleflatmapper.core.map.error,
 							org.simpleflatmapper.core.map.column.joda,
-							org.simpleflatmapper.core.map.column.time,
-							org.simpleflatmapper.core.reflect,
-							org.simpleflatmapper.core.reflect.meta,
-							org.simpleflatmapper.core.reflect.asm,
-							org.simpleflatmapper.core.reflect.getter,
-							org.simpleflatmapper.core.reflect.getter.joda,
-							org.simpleflatmapper.core.reflect.getter.time,
-							org.simpleflatmapper.core.reflect.setter,
-							org.simpleflatmapper.core.reflect.primitive,
-							org.simpleflatmapper.core.tuples,
-							org.simpleflatmapper.core.utils,
-							org.simpleflatmapper.core.conv</Export-Package>
-						<Import-Package>org.objectweb.asm;version="[4.0,6)";resolution:=optional,org.objectweb.asm.signature;version="[4.0,6)";resolution:=optional</Import-Package>
+							org.simpleflatmapper.core.map.column.time</Export-Package>
+						<Import-Package>org.objectweb.asm;version="[4.0,6)";resolution:=optional,org.objectweb.asm.signature;version="[4.0,6)";resolution:=optional,
+						org.simpleflatmapper.core.reflect.*,org.simpleflatmapper.core.tuples;resolution:=optional,org.simpleflatmapper.util,org.simpleflatmapper.converter</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
