--- a/sfm-csv/pom.xml
+++ b/sfm-csv/pom.xml
@@ -77,7 +77,12 @@
 					<classifier>${jar.classifier}</classifier>
 					<instructions>
 						<Export-Package>org.simpleflatmapper.csv</Export-Package>
-						<Import-Package>org.objectweb.asm;version="[4.0,6)";resolution:=optional,org.objectweb.asm.signature;version="[4.0,6)";resolution:=optional,org.simpleflatmapper.core.*</Import-Package>
+						<Import-Package>
+							org.objectweb.asm;version="[4.0,6)";resolution:=optional,
+							org.objectweb.asm.signature;version="[4.0,6)";resolution:=optional,
+							org.joda.time.*;resolution:=optional,
+							org.simpleflatmapper.*
+						</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
