--- a/sfm-datastax/pom.xml
+++ b/sfm-datastax/pom.xml
@@ -31,6 +31,7 @@
 					<classifier>${jar.classifier}</classifier>
 					<instructions>
 						<Export-Package>org.sfm.datastax</Export-Package>
+						<Import-Package>org.simpleflatmapper.*,cassandra.driver.*,com.google.*</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
