--- a/sfm-jdbc/pom.xml
+++ b/sfm-jdbc/pom.xml
@@ -88,8 +88,8 @@
 				<configuration>
 					<classifier>${jar.classifier}</classifier>
 					<instructions>
-						<Export-Package>!org.sfm.*.impl.*,org.sfm.*</Export-Package>
-						<Import-Package>org.objectweb.asm;version="[4.0,6)";resolution:=optional,org.objectweb.asm.signature;version="[4.0,6)";resolution:=optional,*</Import-Package>
+						<Export-Package>org.simpleflatmapper.jdbc,org.simpleflatmapper.jdbc.named</Export-Package>
+						<Import-Package>com.mysql;resolution:=optional,org.joda.time;resolution:=optional,org.simpleflatmapper.*</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
@@ -188,23 +188,6 @@
 			<activation>
 				<jdk>1.8</jdk>
 			</activation>
-
-			<dependencies>
-				<dependency>
-					<groupId>org.jooq</groupId>
-					<artifactId>jool</artifactId>
-					<version>0.9.10</version>
-					<optional>true</optional>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>com.boundary</groupId>
-					<artifactId>fasttuple-core</artifactId>
-					<version>0.1</version>
-					<optional>true</optional>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
 		</profile>
 
 		<profile>
@@ -214,40 +197,11 @@
 			</activation>
 			<dependencies>
 				<dependency>
-					<groupId>org.jooq</groupId>
-					<artifactId>jool</artifactId>
-					<version>0.9.10</version>
-					<optional>true</optional>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>com.boundary</groupId>
-					<artifactId>fasttuple-core</artifactId>
-					<version>0.1</version>
-					<optional>true</optional>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
 					<groupId>org.ow2.asm</groupId>
 					<artifactId>asm</artifactId>
 					<version>6.0_ALPHA</version>
 				</dependency>
 			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.felix</groupId>
-						<artifactId>maven-bundle-plugin</artifactId>
-						<configuration>
-							<classifier>${jar.classifier}</classifier>
-							<instructions>
-								<Export-Package>!org.sfm.*.impl.*,org.sfm.*</Export-Package>
-								<Import-Package>org.objectweb.asm;version="[4.0,6)";resolution:=optional,org.objectweb.asm.signature;version="[4.0,6)";resolution:=optional,*</Import-Package>
-							</instructions>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
 		</profile>
 
 	</profiles>
