--- a/sfm-converter-joda-time/pom.xml
+++ b/sfm-converter-joda-time/pom.xml
@@ -40,6 +40,13 @@
 			<artifactId>sfm-converter</artifactId>
 			<version>2.13-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.simpleflatmapper</groupId>
+			<artifactId>sfm-converter</artifactId>
+			<version>2.13-SNAPSHOT</version>
+			<scope>test</scope>
+			<type>test-jar</type>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -52,37 +59,11 @@
 				<configuration>
 					<classifier>${jar.classifier}</classifier>
 					<instructions>
-						<Export-Package>org.simpleflatmapper.converter.*</Export-Package>
-						<Import-Package>org.simpleflatmapper.util</Import-Package>
+						<Import-Package>org.simpleflatmapper.*,org.joda.*</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.4</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>test-jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.pitest</groupId>
-				<artifactId>pitest-maven</artifactId>
-				<version>1.1.9</version>
-				<configuration>
-					<targetClasses>
-						<param>org.simpleflatmapper.*</param>
-					</targetClasses>
-					<targetTests>
-						<param>org.simpleflatmapper.*</param>
-					</targetTests>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
 	<profiles>
@@ -103,102 +84,5 @@
 				</plugins>
 			</build>
 		</profile>
-		<profile>
-			<id>jdk16</id>
-			<activation>
-				<jdk>1.6</jdk>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-					</plugin>
-					<plugin>
-						<groupId>com.google.code.maven-replacer-plugin</groupId>
-						<artifactId>replacer</artifactId>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>jdk17</id>
-			<activation>
-				<jdk>1.7</jdk>
-			</activation>
-			<dependencies>
-				<dependency>
-					<groupId>com.boundary</groupId>
-					<artifactId>fasttuple-core</artifactId>
-					<version>0.1</version>
-					<optional>true</optional>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-					</plugin>
-					<plugin>
-						<groupId>com.google.code.maven-replacer-plugin</groupId>
-						<artifactId>replacer</artifactId>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>jdk18</id>
-			<activation>
-				<jdk>1.8</jdk>
-			</activation>
-
-			<dependencies>
-				<dependency>
-					<groupId>org.jooq</groupId>
-					<artifactId>jool</artifactId>
-					<version>0.9.10</version>
-					<optional>true</optional>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>com.boundary</groupId>
-					<artifactId>fasttuple-core</artifactId>
-					<version>0.1</version>
-					<optional>true</optional>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-		</profile>
-
-		<profile>
-			<id>jdk19</id>
-			<activation>
-				<jdk>9-ea</jdk>
-			</activation>
-			<dependencies>
-				<dependency>
-					<groupId>org.jooq</groupId>
-					<artifactId>jool</artifactId>
-					<version>0.9.10</version>
-					<optional>true</optional>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>com.boundary</groupId>
-					<artifactId>fasttuple-core</artifactId>
-					<version>0.1</version>
-					<optional>true</optional>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.ow2.asm</groupId>
-					<artifactId>asm</artifactId>
-					<version>6.0_ALPHA</version>
-				</dependency>
-			</dependencies>
-		</profile>
-
 	</profiles>
 </project>
