--- a/sfm-reflect/pom.xml
+++ b/sfm-reflect/pom.xml
@@ -81,7 +81,9 @@
 							org.simpleflatmapper.reflect.getter,
 							org.simpleflatmapper.reflect.setter,
 							org.simpleflatmapper.reflect.primitive</Export-Package>
-						<Import-Package>org.objectweb.asm;version="[4.0,6)";resolution:=optional,org.objectweb.asm.signature;version="[4.0,6)";resolution:=optional;</Import-Package>
+						<Import-Package>org.objectweb.asm;version="[4.0,6)";resolution:=optional,
+							org.objectweb.asm.signature;version="[4.0,6)";resolution:=optional,
+						org.simpleflatmapper.util</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
