--- a/sfm-util/pom.xml
+++ b/sfm-util/pom.xml
@@ -47,7 +47,7 @@
 				<configuration>
 					<classifier>${jar.classifier}</classifier>
 					<instructions>
-						<Export-Package>org.simpleflatmapper.util</Export-Package>
+						<Export-Package>org.simpleflatmapper.util,org.simpleflatmapper.util.date</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
