--- a/sfm-datastax/pom.xml
+++ b/sfm-datastax/pom.xml
@@ -52,12 +52,6 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.datastax.cassandra</groupId>
-			<artifactId>cassandra-driver-mapping</artifactId>
-			<version>2.1.8</version>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>18.0</version>
@@ -71,6 +65,13 @@
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-tuples</artifactId>
 			<version>2.13-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.datastax.cassandra</groupId>
+			<artifactId>cassandra-driver-mapping</artifactId>
+			<version>2.1.8</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
