--- a/sfm-csv/pom.xml
+++ b/sfm-csv/pom.xml
@@ -83,7 +83,7 @@
 				<configuration>
 					<classifier>${jar.classifier}</classifier>
 					<instructions>
-						<Export-Package>org.simpleflatmapper.csv,org.simpleflatmapper.csv.column,org.simpleflatmapper.csv.parser</Export-Package>
+						<Export-Package>org.simpleflatmapper.csv,org.simpleflatmapper.csv.property,org.simpleflatmapper.csv.parser</Export-Package>
 						<Import-Package>
 							org.objectweb.asm;version="[4.0,6)";resolution:=optional,
 							org.objectweb.asm.signature;version="[4.0,6)";resolution:=optional,
