add pluginrepo and fix java6

--- a/ow2.asm/ASM_6_0_ALPHA/pom.xml
+++ b/ow2.asm/ASM_6_0_ALPHA/pom.xml
@@ -33,4 +33,11 @@
       </plugin>
     </plugins>
   </build>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>arnaudroger-maven-plugin-repository</id>
+      <url>https://arnaudroger.github.io/maven</url>
+    </pluginRepository>
+  </pluginRepositories>
 </project>
