--- a/ow2.asm/ASM_6_0_ALPHA/pom.xml
+++ b/ow2.asm/ASM_6_0_ALPHA/pom.xml
@@ -9,10 +9,6 @@
   <artifactId>ow2asm</artifactId>
   <packaging>jar</packaging>
 
-  <properties>
-    <jacoco.skip>true</jacoco.skip>
-  </properties>
-
   <build>
     <plugins>
       <plugin>
@@ -30,6 +26,14 @@
             <version>6.0_ALPHA</version>
           </dependency>
         </dependencies>
+      </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.7.5.201505241946</version>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
       </plugin>
     </plugins>
   </build>
