--- a/sfm-reflect/pom.xml
+++ b/sfm-reflect/pom.xml
@@ -157,6 +157,11 @@
 					<plugin>
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
+						<configuration>
+							<excludes>
+								<exclude>**/ow2asm/**</exclude>
+							</excludes>
+						</configuration>
 					</plugin>
 				</plugins>
 			</build>
