add test for def provider, add servicename in build

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ env:
   - MAVEN_SKIP_RC=true TRAVISBUILD=true
 
 after_success:
-  - mvn -P travis,!dev jacoco:report coveralls:report
+  - mvn -P travis,!dev -DserviceName=travis-ci jacoco:report coveralls:report
 
 
 before_install:
