--- a/sfm-util/pom.xml
+++ b/sfm-util/pom.xml
@@ -35,6 +35,12 @@
 			<version>2.13-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.simpleflatmapper</groupId>
+			<artifactId>sfm-tuples</artifactId>
+			<version>2.13-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
