--- a/sfm-test/pom.xml
+++ b/sfm-test/pom.xml
@@ -51,6 +51,14 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<classifier>${jar.classifier}</classifier>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
