--- a/sfm-csv/pom.xml
+++ b/sfm-csv/pom.xml
@@ -33,11 +33,13 @@
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map</artifactId>
 			<version>2.13-SNAPSHOT</version>
+			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-tuples</artifactId>
 			<version>2.13-SNAPSHOT</version>
+			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
@@ -51,11 +53,13 @@
             <artifactId>sfm-test</artifactId>
             <version>2.13-SNAPSHOT</version>
             <scope>test</scope>
-        </dependency>
+			<classifier>${jar.classifier}</classifier>
+		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-converter-joda-time</artifactId>
 			<version>2.13-SNAPSHOT</version>
+			<classifier>${jar.classifier}</classifier>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
