--- a/sfm-jdbc/pom.xml
+++ b/sfm-jdbc/pom.xml
@@ -34,6 +34,7 @@
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map</artifactId>
 			<version>2.13-SNAPSHOT</version>
+			<classifier>${jar.classifier}</classifier>
 		</dependency>
 
 		<dependency>
@@ -59,6 +60,7 @@
 			<artifactId>sfm-test</artifactId>
 			<version>2.13-SNAPSHOT</version>
 			<scope>test</scope>
+			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
@@ -72,12 +74,14 @@
 			<artifactId>sfm-tuples</artifactId>
 			<version>2.13-SNAPSHOT</version>
 			<scope>test</scope>
+			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-converter-joda-time</artifactId>
 			<version>2.13-SNAPSHOT</version>
 			<scope>test</scope>
+			<classifier>${jar.classifier}</classifier>
 		</dependency>
 	</dependencies>
 
@@ -92,7 +96,7 @@
 					<classifier>${jar.classifier}</classifier>
 					<instructions>
 						<Export-Package>org.simpleflatmapper.jdbc,org.simpleflatmapper.jdbc.named</Export-Package>
-						<Import-Package>com.mysql;resolution:=optional,org.joda.time;resolution:=optional,org.simpleflatmapper.*</Import-Package>
+						<Import-Package>com.mysql;resolution:=optional,org.simpleflatmapper.*</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
