--- a/sfm-map/pom.xml
+++ b/sfm-map/pom.xml
@@ -33,12 +33,14 @@
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-reflect</artifactId>
 			<version>2.13-SNAPSHOT</version>
+			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
 			<version>2.13-SNAPSHOT</version>
 			<scope>test</scope>
+			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>joda-time</groupId>
@@ -50,6 +52,7 @@
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-converter-joda-time</artifactId>
 			<version>2.13-SNAPSHOT</version>
+			<classifier>${jar.classifier}</classifier>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
