--- a/sfm-poi/pom.xml
+++ b/sfm-poi/pom.xml
@@ -59,11 +59,13 @@
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-csv</artifactId>
 			<version>2.13-SNAPSHOT</version>
+			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-converter-joda-time</artifactId>
 			<version>2.13-SNAPSHOT</version>
+			<classifier>${jar.classifier}</classifier>
 			<scope>test</scope>
 		</dependency>
 
@@ -71,6 +73,7 @@
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
 			<version>2.13-SNAPSHOT</version>
+			<classifier>${jar.classifier}</classifier>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
