--- a/sfm-sql2o/pom.xml
+++ b/sfm-sql2o/pom.xml
@@ -47,11 +47,13 @@
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-jdbc</artifactId>
 			<version>2.13-SNAPSHOT</version>
+			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
 			<version>2.13-SNAPSHOT</version>
+			<classifier>${jar.classifier}</classifier>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
