--- a/sfm-tuples/pom.xml
+++ b/sfm-tuples/pom.xml
@@ -33,6 +33,7 @@
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
 			<version>2.13-SNAPSHOT</version>
+			<classifier>${jar.classifier}</classifier>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
