--- a/sfm-util/pom.xml
+++ b/sfm-util/pom.xml
@@ -79,5 +79,37 @@
 				</plugins>
 			</build>
 		</profile>
+		<profile>
+			<id>jdk18</id>
+			<activation>
+				<jdk>1.8</jdk>
+			</activation>
+
+			<dependencies>
+				<dependency>
+					<groupId>org.jooq</groupId>
+					<artifactId>jool</artifactId>
+					<version>0.9.10</version>
+					<optional>true</optional>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+		</profile>
+
+		<profile>
+			<id>jdk19</id>
+			<activation>
+				<jdk>9-ea</jdk>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.jooq</groupId>
+					<artifactId>jool</artifactId>
+					<version>0.9.10</version>
+					<optional>true</optional>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+		</profile>
 	</profiles>
 </project>
