skip deploy asm

--- a/ow2.asm/ASM_6_0_ALPHA/pom.xml
+++ b/ow2.asm/ASM_6_0_ALPHA/pom.xml
@@ -8,6 +8,9 @@
   <version>6.0_ALPHA</version>
   <artifactId>ow2asm</artifactId>
   <packaging>jar</packaging>
+  <properties>
+    <maven.deploy.skip>true</maven.deploy.skip>
+  </properties>
 
   <build>
     <plugins>
