--- a/ow2.asm/ASM_5_1/pom.xml
+++ b/ow2.asm/ASM_5_1/pom.xml
@@ -8,6 +8,10 @@
   <name>ASM Core</name>
   <version>5.1</version>
   <packaging>jar</packaging>
+
+  <properties>
+    <maven.deploy.skip>true</maven.deploy.skip>
+  </properties>
   <build>
     <plugins>
       <plugin>
