--- a/sfm-csv/pom.xml
+++ b/sfm-csv/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>3.0</version>
+		<version>3.0-SNAPSHOT</version>
 	</parent>
 
 	<description>Java library to map flat record - ResultSet, csv - to java object with minimum configuration and low footprint.</description>
@@ -32,46 +32,46 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map</artifactId>
-			<version>3.0</version>
+			<version>3.0-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>ow2asm</artifactId>
-			<version>3.0</version>
+			<version>3.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-tuples</artifactId>
-			<version>3.0</version>
+			<version>3.0-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map</artifactId>
-			<version>3.0</version>
+			<version>3.0-SNAPSHOT</version>
 			<scope>test</scope>
 			<type>test-jar</type>
 		</dependency>
         <dependency>
             <groupId>org.simpleflatmapper</groupId>
             <artifactId>sfm-test</artifactId>
-            <version>3.0</version>
+            <version>3.0-SNAPSHOT</version>
             <scope>test</scope>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-converter-joda-time</artifactId>
-			<version>3.0</version>
+			<version>3.0-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
-			<version>2.9.3</version>
+			<version>2.9.4</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -183,7 +183,7 @@
 				<dependency>
 					<groupId>org.jooq</groupId>
 					<artifactId>jool</artifactId>
-					<version>0.9.10</version>
+					<version>0.9.12</version>
 					<optional>true</optional>
 					<scope>test</scope>
 				</dependency>
@@ -206,7 +206,7 @@
 				<dependency>
 					<groupId>org.jooq</groupId>
 					<artifactId>jool</artifactId>
-					<version>0.9.10</version>
+					<version>0.9.12</version>
 					<optional>true</optional>
 					<scope>test</scope>
 				</dependency>
