--- a/sfm-jdbc/pom.xml
+++ b/sfm-jdbc/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>3.0</version>
+		<version>3.0-SNAPSHOT</version>
 	</parent>
 
 	<description>Java library to map flat record - ResultSet, csv - to java object with minimum configuration and low footprint.</description>
@@ -33,14 +33,14 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map</artifactId>
-			<version>3.0</version>
+			<version>3.0-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
-			<version>2.9.3</version>
+			<version>2.9.4</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -50,36 +50,30 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.38</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>3.0</version>
+			<version>3.0-SNAPSHOT</version>
 			<scope>test</scope>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map</artifactId>
-			<version>3.0</version>
+			<version>3.0-SNAPSHOT</version>
 			<scope>test</scope>
 			<type>test-jar</type>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-tuples</artifactId>
-			<version>3.0</version>
+			<version>3.0-SNAPSHOT</version>
 			<scope>test</scope>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-converter-joda-time</artifactId>
-			<version>3.0</version>
+			<version>3.0-SNAPSHOT</version>
 			<scope>test</scope>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
