--- a/sfm-jmh/pom.xml
+++ b/sfm-jmh/pom.xml
@@ -27,7 +27,7 @@ questions.
 
     <groupId>org.simpleflatmapper</groupId>
     <artifactId>sfm-jmh</artifactId>
-    <version>3.0</version>
+    <version>3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>SFM JMH benchmark</name>
@@ -52,13 +52,13 @@ questions.
         <dependency>
             <groupId>org.simpleflatmapper</groupId>
             <artifactId>sfm-jdbc</artifactId>
-            <version>3.0</version>
+            <version>3.0-SNAPSHOT</version>
             <classifier>${jar.classifier}</classifier>
         </dependency>
         <dependency>
             <groupId>org.simpleflatmapper</groupId>
             <artifactId>sfm-csv</artifactId>
-            <version>3.0</version>
+            <version>3.0-SNAPSHOT</version>
             <classifier>${jar.classifier}</classifier>
         </dependency>
     </dependencies>
@@ -140,7 +140,7 @@ questions.
                 </plugin>
                 <plugin>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.9.1</version>
+                    <version>2.10.4</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-resources-plugin</artifactId>
