--- a/sfm-jooq/pom.xml
+++ b/sfm-jooq/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>3.0</version>
+		<version>3.0-SNAPSHOT</version>
 	</parent>
 
 	<description>jOOQ supports.</description>
@@ -48,33 +48,27 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-jdbc</artifactId>
-			<version>3.0</version>
+			<version>3.0-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>3.0</version>
+			<version>3.0-SNAPSHOT</version>
 			<scope>test</scope>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-converter-joda-time</artifactId>
-			<version>3.0</version>
+			<version>3.0-SNAPSHOT</version>
 			<scope>test</scope>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
-			<version>2.9.3</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>2.3.3</version>
+			<version>2.9.4</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
