--- a/sfm-querydsl/pom.xml
+++ b/sfm-querydsl/pom.xml
@@ -6,7 +6,7 @@
 
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
-		<version>3.0</version>
+		<version>3.0-SNAPSHOT</version>
 		<artifactId>sfm-parent</artifactId>
 	</parent>
 
@@ -39,25 +39,19 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-jdbc</artifactId>
-			<version>3.0</version>
+			<version>3.0-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>com.mysema.querydsl</groupId>
 			<artifactId>querydsl-sql</artifactId>
-			<version>3.6.8</version>
+			<version>3.7.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>3.0</version>
+			<version>3.0-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>2.3.3</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
