--- a/sfm-test-immutables/pom.xml
+++ b/sfm-test-immutables/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>sfm-test-immutables</artifactId>
 	<packaging>jar</packaging>
 
-	<version>3.0</version>
+	<version>3.0-SNAPSHOT</version>
 
 	<licenses>
 		<license>
@@ -20,7 +20,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
+				<version>3.5.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -34,13 +34,13 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-csv</artifactId>
-			<version>3.0</version>
+			<version>3.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-jdbc</artifactId>
-			<version>3.0</version>
+			<version>3.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
