--- a/sfm-test/pom.xml
+++ b/sfm-test/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>3.0</version>
+		<version>3.0-SNAPSHOT</version>
 	</parent>
 
 	<description>SFM common test objects.</description>
@@ -66,7 +66,7 @@
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>javax.persistence</artifactId>
-			<version>2.1.0</version>
+			<version>2.1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -76,17 +76,36 @@
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>2.3.3</version>
+			<version>2.3.4</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.38</version>
+			<version>6.0.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.4.1207.jre6</version>
+			<version>9.4.1211.jre6</version>
 		</dependency>
 	</dependencies>
+
+	<profiles>
+
+		<profile>
+			<id>jdk16_17</id>
+			<activation>
+				<jdk>[1.6,1.8)</jdk>
+			</activation>
+
+			<dependencies>
+				<dependency>
+					<groupId>mysql</groupId>
+					<artifactId>mysql-connector-java</artifactId>
+					<version>5.1.39</version>
+				</dependency>
+			</dependencies>
+		</profile>
+
+	</profiles>
 </project>
