--- a/sfm-tuples/pom.xml
+++ b/sfm-tuples/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>3.0</version>
+		<version>3.0-SNAPSHOT</version>
 	</parent>
 
 	<description>Java library to map flat record - ResultSet, csv - to java object with minimum configuration and low footprint.</description>
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>3.0</version>
+			<version>3.0-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 			<scope>test</scope>
 		</dependency>
@@ -98,7 +98,7 @@
 				<dependency>
 					<groupId>org.jooq</groupId>
 					<artifactId>jool</artifactId>
-					<version>0.9.10</version>
+					<version>0.9.12</version>
 					<optional>true</optional>
 					<scope>test</scope>
 				</dependency>
@@ -121,7 +121,7 @@
 				<dependency>
 					<groupId>org.jooq</groupId>
 					<artifactId>jool</artifactId>
-					<version>0.9.10</version>
+					<version>0.9.12</version>
 					<optional>true</optional>
 					<scope>test</scope>
 				</dependency>
