--- a/sfm-jmh/pom.xml
+++ b/sfm-jmh/pom.xml
@@ -169,7 +169,7 @@ questions.
                 <jdk>9-ea</jdk>
             </activation>
             <properties>
-                <jar.classifier>jdk9</jar.classifier>
+                <jar.classifier>jdk9ea</jar.classifier>
             </properties>
         </profile>
     </profiles>
